fix size of margin on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,8 @@ a{
 @media (max-width: 768px) {
   a{
     font-size: 1rem;
+    margin-top:2rem;
+    margin-bottom:2rem;
   }
   .grid-container {
     grid-template-columns: repeat(3, 1fr); /* fix 3 col*/
